--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vscode": "^1.1.36"
   },
   "dependencies": {
-    "axios": "^1.7.8"
+    "axios": "^1.7.8",
+    "dotenv": "^16.4.5"
   }
 }
