--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "publisher": "eatyourpeas",
   "engines": {
-    "vscode": "^1.75.0"
+    "vscode": "^1.22.0"
   },
   "main": "./dist/extension.js",
   "activationEvents": [
@@ -30,11 +30,13 @@
     "postinstall": "node ./node_modules/vscode/bin/install"
   },
   "devDependencies": {
-    "@types/node": "^14.14.6",
-    "@types/vscode": "^1.50.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "22.10.0",
+    "@types/vscode": "1.95.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.3",
-    "vscode": "^1.1.36"
+    "typescript": "^5.7.2",
+    "@vscode/test-electron": "2.4.1",
+    "vscode":"1.1.37"
   },
   "dependencies": {
     "axios": "^1.7.8",
