--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "main": "./dist/extension.js",
   "activationEvents": [
+    "onStartupFinished"
   ],
   "contributes": {
     "commands": [
@@ -45,9 +46,11 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./"
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
+    "@types/node": "^22.10.2",
     "@types/vscode": "1.95.0",
     "tslint": "^6.1.3",
     "typescript": "^5.7.2"
