--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,24 +10,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "14"
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Install vsce
-      run: npm install -g @vscode/vsce
+      - name: Install vsce
+        run: npm install -g @vscode/vsce
 
-    - name: Package extension
-      run: vsce package
+      - name: Package extension
+        run: vsce package
 
-    - name: Publish extension
-      env:
-        VSCE_PAT: ${{ secrets.VSCE_PAT }}
-      run: vsce publish
+      - name: Publish extension
+        run: vsce publish -p ${{ secrets.VSCE_PAT }}
