--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "axios": "^1.7.8",
-    "dotenv": "^16.4.5"
+    "axios": "^1.7.8"
   }
 }
